--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^15.6.1",
     "react-player": "^0.22.0",
     "react-player-controls": "^0.5.17",
+    "react-rangeslider": "^2.1.0",
     "react-router": "^3.0.5",
     "webpack": "^2.7.0"
   }
