--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "masonry-layout": "^4.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-player": "^0.22.0",
